--- a/src/app/components/project/project.html
+++ b/src/app/components/project/project.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="col-12 d-flex align-items-center">
-                    <input [disabled]="isView" required [name]="'isActive'" [(ngModel)]="Project.isActive"
+                    <input [disabled]="isView"  [name]="'isActive'" [(ngModel)]="Project.isActive"
                         class="form-check-input my-2" type="checkbox">
                     <label class="text-white required-label ms-2" for="isActive">{{ 'isActive' }}</label>
                 </div>
