--- a/src/app/shared/components/badges/badges.component.html
+++ b/src/app/shared/components/badges/badges.component.html
@@ -22,12 +22,12 @@
             </span>
         }
         @case (5) {
-            <span class="blue-badge p-1 px-2">
+            <span class="gray-badge p-1 px-2">
                 {{"Cancelled"}}
             </span>
         }
         @case (6) {
-            <span class="red-badge p-1 px-2">
+            <span class="orange-badge p-1 px-2">
                 {{"Reject"}}
             </span>
         }
