--- a/src/app/shared/components/badges/badges.component.scss
+++ b/src/app/shared/components/badges/badges.component.scss
@@ -12,13 +12,19 @@
         border-radius: 25px;
     }
     .orange-badge{
-        color: #FDBA63;
-        border: 1px solid #FDBA63;
+        color: #e2a601;
+        border: 1px solid #e2a601;
         border-radius: 25px;
     }
     .blue-badge{
         color: #5597FE;
         border: 1px solid #5597FE;
         border-radius: 25px;
+    }
+    .gray-badge{
+        color: #a0a0a0;
+        border: 1px solid #a0a0a0;
+        border-radius: 25px;
+    
     }
 }
