--- a/src/app/shared/components/badges/badges.component.html
+++ b/src/app/shared/components/badges/badges.component.html
@@ -31,5 +31,15 @@
                 {{"Reject"}}
             </span>
         }
+        @case (7) {
+            <span class="green-badge p-1 px-2">
+                {{"F"}}
+            </span>
+        }
+        @case (8) {
+            <span class="green-badge p-1 px-2">
+                {{"F"}}
+            </span>
+        }
     }
 </div>
