--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -10,7 +10,7 @@
 
     <button class="btn d-flex align-items-center gap-2" type="button" id="dropdownUser" data-bs-toggle="dropdown"
       aria-expanded="false">
-      <img src="/assets/images/user-circle.png" class="profile-img">
+      <img [src]="imageProfilePath|| '/assets/images/user-circle.png'" class="profile-img">
       <span>{{username}}</span>
     </button>
 
